# python-project-template

./: README.md  pyproject.toml
src/project/: main.py
tests/project/: test_project.py
